syntax = "proto3";

option go_package = "github.com/IvanNovakovic/SOA_Proj/protos";

package stakeholders;

// Poruka za login zahtev
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Poruka za odgovor sa tokenom
message LoginResponse {
  string token = 1;
  string user_id = 2;
}

// Servis za autentifikaciju
service StakeholderService {
  // Login preko gRPC
  rpc Login(LoginRequest) returns (LoginResponse);
}
